# SoftStairs-QAT

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  validate-pr.yml
docs/: Анализ гипотез по SoftStairs, LR-QAT и структурированным градиентам.md  Реализация малоранговой и спарс ветки как отдельного CUDA kernel.md
examples/: resnet_mnist_qat.py
experiments/: r_scheduler_exp.py  round_approx.ipynb  round_approx_grid_search.py  tail_distribution_analysis.py  weight_drift_analysis.py
src/softstairs_qat/: __init__.py
src/softstairs_qat/core/: __init__.py  quantization_params.py  quantize_function.py  quantizer.py  soft_stairs.py  variance_controller.py
src/softstairs_qat/utils/: __init__.py  device.py  logging.py  r_scheduler.py  reproducibility.py
src/softstairs_qat/wrappers/: __init__.py  config.py  factory.py  quantize_wrapper.py
