[project]
name = "softstairs-qat"
version = "0.1.0"
description = "SoftStairs quantization-aware training with low-rank adapters"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
    "loguru>=0.7",
    "numpy>=1.24",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.0",
    "pytest>=8.0",
]
examples = [
    "transformers>=4.40",
    "torchvision>=0.15",
    "scikit-learn>=1.3",
]
experiments = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]
cuda = []

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
default-groups = ["dev"]

[tool.autopep8]
max_line_length = 120
aggressive = 1

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/softstairs_qat"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
